{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerController",
            "id": "8ea7064a-fda2-4549-b135-9cad16bd82a3",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "8a97a91d-58d3-4e03-92d7-149b25924a9a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1829a1bd-17d8-4e64-a31d-99d5f451736b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "becf272a-9d8a-4ed6-9131-16f7b500b446",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}